# FLock-subnet

./: .env.example  .gitignore  README.md  guide.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml  unit-test.yml
FLockDataset/: __init__.py  constants.py
FLockDataset/miners/: chain.py  data.py  model.py
FLockDataset/validator/: chain.py  test.py  trainer.py  validator_utils.py
docs/: miner.md  subnet-setup.md  validator.md
docs_local/: miner.md  subtensor-setup.md  validator.md
flockoff/: constants.py
flockoff/utils/: clean_gpu.py  git_utils.py
flockoff/validator/: chain.py  database.py  trainer.py  validator_utils.py
neurons/: miner.py  validator.env.example  validator.py
tests/FlockDataset/utils/: test_utils.py
tests/FlockDataset/validators/: test_database.py  test_scoring.py
