[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FLock-subnet"
version = "0.2.0"
description = "FLock Subnet"
authors = [{name = "Flock Devs"}]
readme = "README.md"
requires-python = ">=3.10,<3.13"

[tool.hatch.build.targets.wheel]
packages = ["flockoff", "neurons"]
